fixing front end layout problems

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -44,10 +44,21 @@ ul {
 
 }
 
+.first-container {
+  margin-top: 40px;
+}
+
 .server-container {
   background-color: white;
   width: 100%;
   display: block;
+  position: fixed;
+  background-color: white;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  /* border-bottom: 1px solid #000; */
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2)
 
 }
 
@@ -56,7 +67,7 @@ ul {
   padding: 0px 20px 0px 20px;
   color: blue;
   font-family: Arial;
-
+ 
 }
 
   
